; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_diff-simple.c_diff_unmerged_state.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_diff-simple.c_diff_unmerged_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STATUS_UNMERGED_BOTH_CHANGED = common dso_local global i32 0, align 4
@STATUS_UNMERGED_OTHERS_REMOVED = common dso_local global i32 0, align 4
@STATUS_UNMERGED_I_REMOVED = common dso_local global i32 0, align 4
@STATUS_UNMERGED_BOTH_ADDED = common dso_local global i32 0, align 4
@STATUS_UNMERGED_DFC_I_ADDED_FILE = common dso_local global i32 0, align 4
@STATUS_UNMERGED_DFC_OTHERS_ADDED_FILE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"Unexpected unmerged case\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @diff_unmerged_state(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = ashr i32 %4, 1
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  switch i32 %6, label %19 [
    i32 7, label %7
    i32 3, label %9
    i32 5, label %11
    i32 6, label %13
    i32 2, label %15
    i32 4, label %17
  ]

7:                                                ; preds = %1
  %8 = load i32, i32* @STATUS_UNMERGED_BOTH_CHANGED, align 4
  store i32 %8, i32* %2, align 4
  br label %22

9:                                                ; preds = %1
  %10 = load i32, i32* @STATUS_UNMERGED_OTHERS_REMOVED, align 4
  store i32 %10, i32* %2, align 4
  br label %22

11:                                               ; preds = %1
  %12 = load i32, i32* @STATUS_UNMERGED_I_REMOVED, align 4
  store i32 %12, i32* %2, align 4
  br label %22

13:                                               ; preds = %1
  %14 = load i32, i32* @STATUS_UNMERGED_BOTH_ADDED, align 4
  store i32 %14, i32* %2, align 4
  br label %22

15:                                               ; preds = %1
  %16 = load i32, i32* @STATUS_UNMERGED_DFC_I_ADDED_FILE, align 4
  store i32 %16, i32* %2, align 4
  br label %22

17:                                               ; preds = %1
  %18 = load i32, i32* @STATUS_UNMERGED_DFC_OTHERS_ADDED_FILE, align 4
  store i32 %18, i32* %2, align 4
  br label %22

19:                                               ; preds = %1
  %20 = call i32 @seaf_warning(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  br label %21

21:                                               ; preds = %19
  store i32 0, i32* %2, align 4
  br label %22

22:                                               ; preds = %21, %17, %15, %13, %11, %9, %7
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @seaf_warning(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
